[gd_scene load_steps=8 format=3 uid="uid://brxq1i2cfyqwp"]

[ext_resource type="PackedScene" uid="uid://fsw37e6bhjnn" path="res://assets/scenes/program.tscn" id="1_5vxki"]
[ext_resource type="Script" uid="uid://c4qqfad8c1j4w" path="res://assets/scenes/programs/program_laigter.gd" id="2_oq7v6"]
[ext_resource type="PackedScene" uid="uid://dfbbwpc8mey0f" path="res://assets/scenes/parameters/parameter_filepath.tscn" id="3_8qad5"]
[ext_resource type="PackedScene" uid="uid://pma6pc7ka253" path="res://assets/scenes/parameters/parameter_string.tscn" id="4_663oa"]
[ext_resource type="PackedScene" uid="uid://bhvbnwx78yr8x" path="res://assets/scenes/image_preview.tscn" id="5_miome"]
[ext_resource type="PackedScene" uid="uid://wbeyntko06of" path="res://assets/scenes/progress_display.tscn" id="6_oq7v6"]

[sub_resource type="ViewportTexture" id="ViewportTexture_oq7v6"]
viewport_path = NodePath("panel_container/margin_container/h_split_container/v_box_container/left_panel/subwindow_locker/texture_rect/sub_viewport")

[node name="program_laigter" node_paths=PackedStringArray("source_image_preview", "target_image_preview", "progress_display", "parameters") instance=ExtResource("1_5vxki")]
script = ExtResource("2_oq7v6")
source_image_preview = NodePath("panel_container/margin_container/h_split_container/right_panel/scroll_container/margin_container/output_list/h_box_container/source_preview")
target_image_preview = NodePath("panel_container/margin_container/h_split_container/right_panel/scroll_container/margin_container/output_list/h_box_container/target_preview")
progress_display = NodePath("panel_container/margin_container/h_split_container/right_panel/scroll_container/margin_container/output_list/progress_display")
program_name = "Laigter Normals"
script_path = "res://assets/scenes/programs/laigter.py"
parameters = [NodePath("panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list/laigter_path"), NodePath("panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list/laigter_preset_path"), NodePath("panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list/laigter_filter"), NodePath("panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list/source_folder"), NodePath("panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list/target_folder")]

[node name="input_list" type="VBoxContainer" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container" index="0"]
layout_mode = 2

[node name="laigter_path" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list" index="0" instance=ExtResource("3_8qad5")]
layout_mode = 2
file_mode = 0
text = "/Applications/laigter.app/Contents/MacOS/laigter"
label_text = "Laigter Path"
save_to_prefs = true

[node name="laigter_preset_path" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list" index="1" instance=ExtResource("3_8qad5")]
layout_mode = 2
file_mode = 0
text = "/Users/gnuckell/Mirror/Gamedev/Charybdis (admin)/charybdis/assets_staging/charybdis5"
label_text = "Preset"
save_to_prefs = true

[node name="laigter_filter" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list" index="2" instance=ExtResource("4_663oa")]
layout_mode = 2
text = ".+(?<!_n)\\.png$"
label_text = "Name Filter"
save_to_prefs = true

[node name="h_separator" type="HSeparator" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list" index="3"]
layout_mode = 2

[node name="source_folder" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list" index="4" instance=ExtResource("3_8qad5")]
layout_mode = 2
label_text = "Source"

[node name="target_folder" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/input_list" index="5" instance=ExtResource("3_8qad5")]
layout_mode = 2
file_mode = 2
label_text = "Destination Folder"

[node name="texture_rect" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/subwindow_locker" index="0"]
texture = SubResource("ViewportTexture_oq7v6")

[node name="sprite_2d" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/subwindow_locker/texture_rect/sub_viewport" index="0"]
frame_progress = 0.62871

[node name="output_list" type="VBoxContainer" parent="panel_container/margin_container/h_split_container/right_panel/scroll_container/margin_container" index="0"]
layout_mode = 2

[node name="h_box_container" type="HBoxContainer" parent="panel_container/margin_container/h_split_container/right_panel/scroll_container/margin_container/output_list" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="source_preview" parent="panel_container/margin_container/h_split_container/right_panel/scroll_container/margin_container/output_list/h_box_container" index="0" instance=ExtResource("5_miome")]
layout_mode = 2
size_flags_horizontal = 3

[node name="target_preview" parent="panel_container/margin_container/h_split_container/right_panel/scroll_container/margin_container/output_list/h_box_container" index="1" instance=ExtResource("5_miome")]
layout_mode = 2
size_flags_horizontal = 3

[node name="progress_display" parent="panel_container/margin_container/h_split_container/right_panel/scroll_container/margin_container/output_list" index="1" instance=ExtResource("6_oq7v6")]
layout_mode = 2
label_text = ""
